<resources>
  <string name="app_name">InventoryApp</string>
  <string name="empty_view_title_text">Click the round button to add items. To delete all items
    press button "Delete All Items" at the top right of the screen. </string>
  <string name="empty_view_subtitle_text">Get started by adding a item</string>
  <string name="action_insert_dummy_data">Insert Dummy Data</string>
  <string name="action_delete_all_entries">Delete All Items</string>
  <string name="editor_activity_title_new_item">Add a Item</string>
  <string name="editor_activity_title_edit_item">Edit Item</string>
  <string name="action_save">Save</string>
  <string name="action_delete">Delete</string>
  <string name="editor_insert_item_successful">Item saved</string>
  <string name="editor_insert_item_failed">Error with saving item</string>
  <string name="editor_update_item_successful">Item updated</string>
  <string name="editor_update_item_failed">Error with updating item</string>
  <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
  <string name="discard">Discard</string>
  <string name="keep_editing">Keep Editing</string>
  <string name="category_product_name">Product name</string>
  <string name="category_quantity">Quantity</string>
  <string name="category_price">Price</string>
  <string name="hint_product_name">Product name</string>
  <string name="hint_quantity">Quantity in stock</string>
  <string name="hint_item_price">Price in dollar</string>
  <string name="item_price">$</string>
  <string name="editor_delete_item_successful">Item deleted</string>
  <string name="editor_delete_item_failed">Error with deleting item</string>
  <string name="delete_dialog_msg">Delete this item?</string>
  <string name="delete">Delete</string>
  <string name="cancel">Cancel</string>
  <string name="catalog_activity_delete_all_items_successful">All items deleted</string>
  <string name="catalog_activity_delete_all_items_failed">Error with deleting all items</string>
  <string name="pet_cursor_adapter_unknown_breed">Unknown breed</string>
  <string name="text_view_product_name">Product name</string>
  <string name="text_view_quantity">Quantity</string>
  <string name="text_view_price">Price</string>
  <string name="button_sell">Sell</string>
  <string name="action_order_more">Order more</string>
  <string name="button_increase">+</string>
  <string name="button_decrease">-</string>
</resources>
