<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/activity_margin"
  android:descendantFocusability="beforeDescendants"
  android:focusableInTouchMode="true"
  android:orientation="vertical"
  tools:context=".EditorActivity"
  >
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
      style="@style/CategoryStyle"
      android:text="@string/category_overview"
      />
    <EditText
      android:id="@+id/edit_item_name"
      style="@style/EditorFieldStyle"
      android:layout_weight="2"
      android:hint="@string/hint_product_name"
      android:inputType="textCapWords"
      />
  </LinearLayout>
  <LinearLayout
    android:id="@+id/container_quantity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
      style="@style/CategoryStyle"
      android:text="@string/category_quantity"
      />
    <EditText
      android:id="@+id/edit_quantity"
      style="@style/EditorFieldStyle"
      android:layout_weight="2"
      android:hint="@string/hint_quantity"
      android:inputType="number"
      />
  </LinearLayout>
  <LinearLayout
    android:id="@+id/container_price"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
      style="@style/CategoryStyle"
      android:text="@string/category_price"
      />
    <RelativeLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:paddingStart="4dp"
      android:paddingLeft="4dp"
      >
      <EditText
        android:id="@+id/edit_item_price"
        style="@style/EditorFieldStyle"
        android:layout_width="match_parent"
        android:hint="@string/hint_item_price"
        android:inputType="number"
        />
      <TextView
        android:id="@+id/label_price_units"
        style="@style/EditorUnitsStyle"
        android:text="@string/item_price"
        />
    </RelativeLayout>
  </LinearLayout>
</LinearLayout>
