<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for a single list item in the list of pets -->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/activity_margin"
  android:orientation="vertical"
  >
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
      style="@style/ListItemCategoryStyle"
      android:text="@string/text_view_product_name"
      />
    <TextView
      android:id="@+id/name"
      style="@style/ListItemFieldStyle"
      tools:text="Pencil with big black balls and boobs"
      />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
      style="@style/ListItemCategoryStyle"
      android:text="@string/text_view_quantity"
      />
    <TextView
      android:id="@+id/quantity"
      style="@style/ListItemFieldStyle"
      android:layout_weight="1"
      tools:text="1"
      />
    <Button
      android:id="@+id/button_sell"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      tools:text="Sell"
      android:text="@string/button_sell"
      android:focusable="false"
      android:focusableInTouchMode="false"
      />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
      style="@style/ListItemCategoryStyle"
      android:text="@string/text_view_price"
      />
    <TextView
      android:id="@+id/price"
      style="@style/ListItemFieldStyle"
      tools:text="17"
      />
  </LinearLayout>
</LinearLayout>